Update documentation and API for workspace forms
- Enhanced the documentation for adding new API endpoints, detailing the necessary steps and file updates required for consistency.
- Introduced a new API endpoint to list forms within a specific workspace, including detailed OpenAPI specifications and response structures.
- Updated the navigation structure in the documentation to include the new forms endpoint and reorganized existing entries for clarity.
- Marked the previous endpoint for listing all forms as deprecated, directing users to the new workspace-specific endpoint.
- Made minor formatting and content adjustments across various documentation files to improve readability and maintainability.

--- a/docs/api-reference/forms/list-forms.mdx
+++ b/docs/api-reference/forms/list-forms.mdx
@@ -2,7 +2,11 @@
 openapi: get /open/forms
 ---
 
-# List Forms
+# List Forms (Deprecated)
+
+<Warning>
+**Deprecated**: This endpoint is deprecated. Use [List Workspace Forms](./list-workspace-forms) instead to retrieve forms for a specific workspace.
+</Warning>
 
 Retrieve every form accessible to the authenticated user across **all** of their workspaces.
 
