Refactor form integration request and components to use 'data' instead of 'settings'
- Updated FormIntegrationsRequest to change validation rules from 'settings' to 'data', ensuring the 'data' field is required and cannot be empty.
- Adjusted EmailIntegration and related components to reflect the new 'data' structure, including validation error messages.
- Modified test cases to align with the updated data structure, ensuring all instances of 'settings' are replaced with 'data'.
- Enhanced integration components (Discord, Slack, Telegram, Webhook) to use 'data' for configuration fields, improving consistency across integrations.
- Updated API documentation to reflect changes in the request body structure for form integrations.

--- a/docs/api-reference/integrations/create-webhook-integration.mdx
+++ b/docs/api-reference/integrations/create-webhook-integration.mdx
@@ -13,15 +13,16 @@ This endpoint requires a **Personal Access Token** with the `manage-integrations
 ## Request
 
 <ParamField path="form" type="number" required>
-The ID of the form to which the webhook will be added.
+    The ID of the form to which the webhook will be added.
 </ParamField>
 
 <ParamField body="integration_id" type="string" required>
-Must be set to `"webhook"` for webhook integrations.
+    Must be set to `"webhook"` for webhook integrations.
 </ParamField>
 
 <ParamField body="status" type="string">
-The initial status of the webhook. Allowed values: `"active"` (default), `"inactive"`.
+    The initial status of the webhook. Allowed values: `"active"` (default),
+    `"inactive"`.
 </ParamField>
 
 <ParamField body="data" type="object" required>
